--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 </div>
             </div>
             <div class="col-md-6 mt-3 mb-3">
-                <h3 class="text-light">Blade OF Sadness</h3>
+                <h3 class="text-light">Birds Of Sadness</h3>
                 <p class="text-light">
                     Welcome to our Guild! We are a diverse and dynamic community of gamers, united by our passion for gaming and our commitment to excellence. Our guild was founded by Sho and Chow with the mission to create a supportive and inclusive environment where members can thrive, share their experiences, and achieve their gaming goals together.
                 </p>
