--- a/index.html
+++ b/index.html
@@ -520,8 +520,12 @@
 
 
     
-    
-    <!---->
+    <script>
+        // Disable right-click
+        document.addEventListener('contextmenu', function (e) {
+            e.preventDefault();
+        });
+    </script>
 
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
