--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     
     <br />
 
-    <div class="container-fluid" style="background: linear-gradient(180deg, #000000 70%, rgba(183, 0, 255, 0.801) 100%);">
+    <div class="container-fluid" style="background: linear-gradient(180deg, #000000 70%, rgba(183, 0, 255, 0.801) 100%); height: 100%;">
         <footer class="text-white mt-5 py-5" id="contactus" style="background: none;">
             <div class="container py-4">
                 <div class="row">
