--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                                     <div id="collapseOne" class="collapse " aria-labelledby="headingOne" data-parent="#resourcesAccordion">
                                         <div class="card-body" style="border-top: 1px solid black;">
                                             <img src="./img/hidenseek.jpg" alt="Serxe Graal" width="100%" height="100%" style="border-radius: 5px; height: 300px;">
-                                            <p class="text-light" >In Hide and Seek, one player hides somewhere on the map, and the other members must find them. Who ever finds him will win the event.</p>
+                                            <p class="text-light" >In Hide and Seek, one player hides somewhere on the map, and the other members must find him. Who ever finds him will win the event.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -485,7 +485,7 @@
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#resourcesAccordion">
                                         <div class="card-body" style="border-top: 1px solid black;">
                                             <img src="./img/sparring.jpg" alt="Serxe Graal" width="100%" height="100%" style="border-radius: 5px; height: 300px;">
-                                            <p class="text-light">In Guild Spar, players engage in 1v1 battles against members of the same guild. Whoever survives wins.</p>
+                                            <p class="text-light">In Spar, players engage in 1v1 battles against members of the same guild. Whoever survives wins.</p>
                                         </div>
                                     </div>
                                 </div>
